# baku

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.override.yml.dist  docker-compose.yml  docker-compose.yml.dist  renew-cert.sh  retour-presentation-alpha.md  start-dev.sh
back/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.gradle  front_files  micronaut-cli.yml  rust-toolchain
back/baku/: .dockerignore  Dockerfile
back/baku/src/main/java/com/bakuanimation/: GenerateMovie.java  GenerateStackAndThumbnails.java  GenerateTestFolder.java
back/baku/src/main/resources/: application.yml  logback.xml
back/java/: .gitignore  pom.xml
back/java/src/main/java/com/bakuanimation/: GenerateStackAndThumbnails.java
back/java/src/main/resources/: logback.xml
back/res/: index.css  index.html  uploadtest.js
back/src/: main.rs
back/src/main/java/com/bakuanimation/: Application.java  FallbackResourceLoader.java  GenerateMovie.java
back/src/main/java/com/bakuanimation/api/: CollaborationSyncService.java  HistoryService.java  ImageService.java  IssueService.java  Movie.java  MovieService.java  MovieStatus.java  PermissionService.java  SoundService.java  TTSService.java
back/src/main/java/com/bakuanimation/model/: Audio.java  (+12 more)
back/src/main/resources/: application.yml  logback.xml
back/src/test/java/com/bakuanimation/: ConferenceControllerTest.java
back/src/tls/: certificate.pem  key.pem
back/stacks/: 9b74bf67-f192-4acd-9dd6-80cd3de78f80.stack  da86c5e4-59c5-41bc-8607-b5b4591231e8.stack  default.stack
(+223 files in other folders)
